24.2.8 `unreleased-commits` - Avoid internal wrapping
https://github.com/refined-github/refined-github/pull/7376
https://github.com/refined-github/refined-github/issues/7375

--- a/style/24.2.8.css
+++ b/style/24.2.8.css
@@ -8,3 +8,8 @@
 	);
 	--rgh-background: var(--bgColor-default, var(--color-canvas-default, #fff));
 }
+
+/* https://github.com/refined-github/refined-github/issues/7375 */
+.BtnGroup:has(>[aria-label*="unreleased commit"]) {
+	flex-shrink: 0;
+}
